--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,11 +67,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
+      - name: Assemble Release APK
+        run: ./gradlew assembleRelease
+
       - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: app/release/app-release.apk
+          asset_path: app/build/outputs/apk/release/app-release.apk
           asset_name: ProjectName-${{env.VERSION_NAME}}.apk
           asset_content_type: application/vnd.android.package-archive
         env:
