--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,6 +69,10 @@ jobs:
 
       - name: Assemble Release APK
         run: ./gradlew assembleRelease
+      - name: List build outputs
+        run: |
+          echo "==> APKs en outputs/apk:"
+          ls -R app/build/outputs/apk || true
 
       - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
