--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,10 +69,12 @@ jobs:
 
       - name: Assemble Release APK
         run: ./gradlew assembleRelease
-      - name: List build outputs
+
+      - name: Renombrar unsigned APK a release.apk
         run: |
-          echo "==> APKs en outputs/apk:"
-          ls -R app/build/outputs/apk || true
+          mv \
+            app/build/outputs/apk/release/app-release-unsigned.apk \
+            app/build/outputs/apk/release/app-release.apk
 
       - name: Upload APK to Release
         uses: actions/upload-release-asset@v1
