--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Add Permissions
         run: chmod +x ./gradlew
 
-      - name: Decodificar e inyectar google-services.json
+      - name: Decode google-services.json
         run: |
           mkdir -p app
           echo "${{ secrets.FIREBASE_JSON }}" | base64 -d > app/google-services.json
@@ -70,7 +70,7 @@ jobs:
       - name: Assemble Release APK
         run: ./gradlew assembleRelease
 
-      - name: Renombrar unsigned APK a release.apk
+      - name: Rename unsigned APK to release.apk
         run: |
           mv \
             app/build/outputs/apk/debug/app-debug.apk \
